--- a/template/style/style.css
+++ b/template/style/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+﻿@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -1255,7 +1255,7 @@ margin-bottom:3px;
 
 .avtoriz label{
 	float: left;
-	padding-right: 15px;
+	padding-right: 10px;
 	font-style: italic;
 	font-size: 14px;
 	margin-bottom: 5px;
@@ -1653,7 +1653,6 @@ float: left;
 }
 
 .catalog-musinst:nth-child(3n){margin-right: 0;}
-
 
 .m-img{
 	position: relative;
