--- a/template/style/style.css
+++ b/template/style/style.css
@@ -557,8 +557,15 @@ padding: 25px 0;
 border-top:5px solid #000;
 background:#2a2a2a url(../img/footer-bg.png) repeat;
 }
+#footer_admin{
+
+width: auto;
 
 
+
+}
+
+#footer_admin p {color: #fff;}
 
 
 #footer p {color: #fff;}
